# kata

./: main.py  pyproject.toml
src/: attributes.py  getter_setter.py  polymorphism.py  python_kata.py
src/kata/: __init__.py  __main__.py  python_kata.py
src/kata/netbox/: __init__.py  ip_address.py
src/netbox/: ip_address.py
tests/: conftest.py  test_getter_setter.py  test_netbox.py
