[project]
name = "kata"
version = "0.1.0"
description = "A Python package for managing and running coding katas."
authors = [
    { name = "Nik Sheridan", email = "niksheridan@duck.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
