[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kata"
version = "0.1.0"
description = "A Python package for managing and running coding katas."
authors = [
    { name = "Nik Sheridan", email = "niksheridan@duck.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
kata = "kata.python_kata:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
